--- a/Android/GolgiBird/GolgiBird/build.gradle
+++ b/Android/GolgiBird/GolgiBird/build.gradle
@@ -27,7 +27,9 @@ repositories {
         }
     }
 }
-  and it should be placed
+  and it should be placed in the same directory
+  as the GolgiBird.AppKey files
+
   If you don't need to sign the APK
   Remove/Comment-Out the following 'apply from:' line and
   the signingConfig line android/buildTypes/Release
@@ -43,8 +45,8 @@ android {
     defaultConfig {
         minSdkVersion 8
         targetSdkVersion 19
-        versionCode 7
-        versionName "2.5"
+        versionCode 8
+        versionName "2.6"
     }
     buildTypes {
         release {
