--- a/iOS/.gitignore
+++ b/iOS/.gitignore
@@ -162,3 +162,5 @@ xcuserdata
 # UNKNOWN: recommended by others, but I can't discover what these files are
 #
 # ...none. Everything is now explained.
+
+GolgiBird/GolgiBird/GOLGIBIRD_KEYS.h
