--- a/iOS/GolgiBird/GolgiBird/Settings.bundle/Root.plist
+++ b/iOS/GolgiBird/GolgiBird/Settings.bundle/Root.plist
@@ -6,13 +6,25 @@
 	<array>
 		<dict>
 			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
+			<string>Identity and Data Policy</string>
+			<key>FooterText</key>
+			<string>These fields control whether GolgiBird sends data (High-Scores and live Gameplay) to our Game Servers and if it does, how you are identified.</string>
+		</dict>
+		<dict>
+			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
-			<string>Broadcast Games</string>
+			<string>Send Data</string>
 			<key>Key</key>
 			<string>broadcastGames</string>
 			<key>DefaultValue</key>
-			<true/>
+			<false/>
+			<key>TrueValue</key>
+			<string>YES</string>
+			<key>FalseValue</key>
+			<string>NO</string>
 		</dict>
 		<dict>
 			<key>AutocapitalizationType</key>
