--- a/Android/GolgiBird/GolgiBird/build.gradle
+++ b/Android/GolgiBird/GolgiBird/build.gradle
@@ -40,13 +40,13 @@ apply from: project.GOLGI_DIR + '/Android/golgi.gradle'
 android {
 
     compileSdkVersion 19
-    buildToolsVersion "19.0.1"
+    buildToolsVersion "19.1.0"
 
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 19
-        versionCode 28000
-        versionName "2.8"
+        versionCode 29000
+        versionName "2.9"
     }
     buildTypes {
         release {
@@ -59,8 +59,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:+'
-    compile 'com.google.android.gms:play-services:3.1.36'
+    compile 'com.android.support:appcompat-v7:19.+'
+    compile 'com.google.android.gms:play-services:3.1.+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project.GOLGI_AAR
 }
