--- a/Android/GolgiBird/GolgiBird/build.gradle
+++ b/Android/GolgiBird/GolgiBird/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'android'
 
 project.ext {
-    GOLGI_DIR = "$System.env.HOME" + '/Golgi-Pkg/v2-08-03'
+    GOLGI_DIR = "$System.env.HOME" + '/Golgi-Pkg/v3-03-00'
     GOLGI_THRIFT_FILE = "../../../TapTelegraph.thrift"
     GOLGI_DEV_KEY_FILE = "../../../GolgiBird.DevKey"
     GOLGI_APP_KEY_FILE = "../../../GolgiBird.AppKey"
@@ -39,14 +39,14 @@ apply from: project.GOLGI_DIR + '/Android/golgi.gradle'
 
 android {
 
-    compileSdkVersion 19
+    compileSdkVersion 21
     buildToolsVersion "19.1.0"
 
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 19
-        versionCode 29000
-        versionName "2.9"
+        targetSdkVersion 21
+        versionCode 30000
+        versionName "3.0"
     }
 
     buildTypes {
@@ -59,8 +59,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:19.+'
-    compile 'com.google.android.gms:play-services:3.1.+'
+    compile 'com.android.support:appcompat-v7:21.+'
+    //compile 'com.google.android.gms:play-services:3.1.+'
+    compile 'com.google.android.gms:play-services:7.5.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project.GOLGI_AAR
 }
